[gd_scene format=3 uid="uid://b4im328v665v6"]

[ext_resource type="Theme" uid="uid://b1isuu0lcmwbl" path="res://Jericho/ui/general.tres" id="1_47slr"]
[ext_resource type="StyleBox" uid="uid://dplkulcc0u3xg" path="res://Jericho/ui/styleboxes/stylebox_flat_black.tres" id="2_sr5tg"]
[ext_resource type="Script" uid="uid://crdxjq7aeyyc0" path="res://Jericho/ui/panels/game_complete_panel.gd" id="3_x2ll3"]
[ext_resource type="AudioStream" uid="uid://cl5n5drjyqmce" path="res://Ben/penaliser.mp3" id="4_47slr"]

[node name="GameCompletePanel" type="PanelContainer" unique_id=266422431]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_47slr")
theme_override_styles/panel = ExtResource("2_sr5tg")
script = ExtResource("3_x2ll3")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=134302664]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1298275601]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1412684889]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 128
text = "Thanks for playing!"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1407705587]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=781141636]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=588576068]
stream = ExtResource("4_47slr")
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
